# pplqueue-bot

./: .parameters.template.json  .secrets.template.json  README.md  app.py
bot/bdd-features/: 01_AddBot.feature  02_RemoveBot.feature  05_SaveMessages.feature  06_RetrieveSavedMessages.feature  07_SetPriorities.feature  08_EnableReminders.feature  09_DisableReminders.feature
bot/bot-app/: README.md  manage.py  pyproject.toml
bot/bot-app/accounts/: models.py
bot/bot-app/accounts/migrations/: 0001_initial.py
bot/bot-app/accounts/tests/: test_users.py
bot/bot-app/bot_app/: asgi.py  settings.py  urls.py  wsgi.py
bot/bot-app/bot_app/settings/: base.py  prod.py  stage.py
bot/bot-app/docker/: .env.template  docker-compose.yml
bot/bot-app/docker/app/: Dockerfile  start-celery-worker.sh
bot/bot-app/events/: urls.py  views.py
bot/bot-app/events/event_handler/: errors.py  handlers.py  service.py  tasks.py
bot/bot-app/slack_messages/: apps.py  models.py  urls.py  views.py
bot/bot-app/slack_messages/event_handlers/: errors.py  handlers.py  service.py
bot/bot-app/slack_messages/migrations/: 0001_initial.py  0002_messagelink.py
bot/bot-app/slack_messages/tests/: conftest.py  test_channels.py  test_events.py  test_messages.py
pplqueue_bot/: pplqueue_bot_stack.py
tests/unit/: test_pplqueue_bot_stack.py
